--- a/school_attendance/wizard/student_attendance_by_month_view.xml
+++ b/school_attendance/wizard/student_attendance_by_month_view.xml
@@ -28,13 +28,13 @@
                     <group colspan="4">
                         <button
                             name="print_report"
-                            class="fa fa-check"
+                            icon="fa-check"
                             string="Print"
                             type="object"
                             colspan="1"
                         />
                         <button
-                            class="fa fa-ban"
+                            icon="fa-ban"
                             special="cancel"
                             string="Cancel"
                             colspan="1"
